# Learning-Analytics

./: .env.example  .gitignore  PIPELINE_GUIDE.md  README_DASHBOARD.md  Readme.md  architecture.txt  pyproject.toml  requirements.txt  requirements_dashboard.txt  structure.txt  test_init.py  workflow.txt
config/: config.py
docs/: DATABASE_CONFIG.md  INSTALLATION.md
models/: model_metadata.json  model_metadata_150_day.json  model_metadata_90_day.json  model_metadata_day180_dev.json  model_metadata_day180_prod.json  model_metadata_day180_test.json
models/dev1/: model_metadata_120_day.json  model_metadata_180_day.json  model_metadata_210_day.json
notebooks/: 01_exploration.ipynb  02_data_preparation.ipynb  03_feature_engineering.ipynb  04_modeling.ipynb  oulad-random-forest.ipynb
src/data/: extract.py  load.py  loader.py  transform.py
src/features/: build_features.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/pipeline/: __init__.py  orchestrator.py
src/visualization/: streamlit_dashboard.py
tests/: test_autonomy.py  test_connectio.py  test_etl_process_extract.py  test_etl_process_load.py  test_etl_process_transform.py  test_evaluate_proccess.py  test_features.py  test_predict_process.py  test_train_process.py
utils/: login_setup.py  setup_database.py
